@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230114"
-#define public MagickPackageReleaseDate "snapshot-20230114"
+#define public MagickPackageVersionAddendum ".020230115"
+#define public MagickPackageReleaseDate "snapshot-20230115"
