@@ -37,6 +37,22 @@
 </div>
 
 <div class="document">
+<p>2023-01-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>coders/wpg.c: Change line terminations back to ISO standard
+format.</p></li>
+<li><p>Makefile.am: No longer produce &quot;.sig&quot; files since the &quot;.asc&quot;
+files can do everything that the &quot;.sig&quot; files can do.</p></li>
+</ul>
+</blockquote>
+<p>2023-01-15  Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;yandex&#46;com">JaFojtik<span>&#64;</span>yandex<span>&#46;</span>com</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>VisualMagick/tests/runtest.bat</p></li>
+<li><p>coders/wpg.c Added WPG writer ... cross your fingers.</p></li>
+</ul>
+</blockquote>
 <p>2023-01-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
