@@ -1,3 +1,11 @@
+2023-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/wpg.c: Change line terminations back to ISO standard
+	format.
+
+	* Makefile.am: No longer produce ".sig" files since the ".asc"
+	files can do everything that the ".sig" files can do.
+
 2023-01-15  Fojtik Jaroslav  <JaFojtik@yandex.com>
 
 	* VisualMagick/tests/runtest.bat
